Fix: fixed issue of two scrollbars showing, also fixed background going right to the right, closed issue #81

--- a/brewdog_project/frontend/static/css/home.css
+++ b/brewdog_project/frontend/static/css/home.css
@@ -1,7 +1,6 @@
 body, html {
     color: #EEE;
     overflow-x: hidden;
-    overflow-y:scroll;
 }
 .container-fluid {
     background-color: #111;
@@ -68,9 +67,9 @@ body, html {
     width: 80vw;
     background-color: #EEE;
     color: black;
-    padding: 40px 20vh;
+    padding: 20px 5vw;
     border-radius: 4px;
-    font-family: Inter;
+    /* font-family: Inter; */
     box-shadow: 0 0 6px #EEE;
     overflow: auto;
 }
@@ -124,7 +123,7 @@ body, html {
     color: black;
     padding: 60px 20vh 80px 20vh;
     border-radius: 4px;
-    font-family: Inter;
+    /* font-family: Inter; */
     box-shadow: 0 0 6px #EEE;
     overflow: auto;
 }
