--- a/brewdog_project/frontend/static/css/useraccount.css
+++ b/brewdog_project/frontend/static/css/useraccount.css
@@ -1,11 +1,8 @@
 /* Account forms (login, signup) styles */
 .flex-container {
-    height:80vh;
+    height: 86vh;
     display: flex;
     align-items: center;
-}
-
-body{
     background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25 )), url("http://127.0.0.1:8000/static/frontend/827a61fd8f5838e739b1b44b1fb3ec53.jpeg");
     background-size: 100vw;
 }
